# de-bedrijfskompas-pipeline

./: .gitignore  CONSTITUTION.md  README.md  pyproject.toml
.claude/: settings.json
docs/: GLOBAL_SCORING_FRAMEWORK.md
openspec/: config.yaml
pipeline/: run.py
pipeline/content_collection/: README.md  __init__.py  __main__.py  core.py  crawl.py  extract.py  fetch.py  render.py  sitemap.py
pipeline/content_summarization/: __init__.py  __main__.py  core.py  llm.py
pipeline/dataset_output/: __main__.py  core.py  timestamps.py
pipeline/fact_extraction/: __init__.py  __main__.py  address.py  core.py  llm.py  prompt.py
pipeline/geocoding/: __init__.py  __main__.py  address.py  core.py  pdok.py
pipeline/global_scoring/: __init__.py  __main__.py  core.py  llm.py
pipeline/publish/: __init__.py  __main__.py  core.py
pipeline/tagging/: __init__.py  __main__.py  core.py  frontmatter.py  llm.py
pipeline/tagline_extraction/: __init__.py  __main__.py  core.py  llm.py
pipeline/translation/: __main__.py  core.py  llm.py
pipeline/website_resolution/: README.md  __init__.py  __main__.py  core.py  search.py
prompts/: content-summarization.md  global-scoring.md  tagging.md  tagline-extraction.md  translation.md
test-set/: companies-medium.json  companies.json
tests/: test_content_collection.py  test_content_summarization.py  test_dataset_output.py  test_fact_extraction.py  test_geocoding.py  test_global_scoring.py  test_llm_backoff.py  test_publish.py  test_run.py  test_tagging.py  test_tagline_extraction.py  test_translation.py  test_website_resolution.py
(+134 files in other folders)
