[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "de-bedrijfskompas-pipeline"
version = "0.1.0"
description = "Company-first discovery pipeline: scrape, extract, and de-marketing-ify company website data."
requires-python = ">=3.11"
dependencies = [
    "ddgs",
    "python-slugify",
    "tldextract",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]
exclude = ["tests*", "test-set*", "openspec*"]

[tool.pytest.ini_options]
markers = [
    "network: tests that require live network access (search backends, etc.)",
]
